; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_srq.c_get_wqe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_srq.c_get_wqe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_ib_srq = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.mlx5_ib_srq*, i32)* @get_wqe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_wqe(%struct.mlx5_ib_srq* %0, i32 %1) #0 {
  %3 = alloca %struct.mlx5_ib_srq*, align 8
  %4 = alloca i32, align 4
  store %struct.mlx5_ib_srq* %0, %struct.mlx5_ib_srq** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mlx5_ib_srq*, %struct.mlx5_ib_srq** %3, align 8
  %6 = getelementptr inbounds %struct.mlx5_ib_srq, %struct.mlx5_ib_srq* %5, i32 0, i32 1
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.mlx5_ib_srq*, %struct.mlx5_ib_srq** %3, align 8
  %9 = getelementptr inbounds %struct.mlx5_ib_srq, %struct.mlx5_ib_srq* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = shl i32 %7, %11
  %13 = call i8* @mlx5_buf_offset(i32* %6, i32 %12)
  ret i8* %13
}

declare dso_local i8* @mlx5_buf_offset(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
